--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="A:\WebDev Course\HTML Personal Site\placeholder.png" alt="Me" width="200" height="200"></td>
+      <td><img src="Images\placeholder.png" alt="Me" width="200" height="200"></td>
       <td><h1>Archie Duck</h1>
       <p><em>Full Stack Web Developer.</em></p>
       <p>I am a full stack developer and i like turtles.</p></td>
